--- a/MSBank/Pages/Shared/AdminLTE/_Styles.cshtml
+++ b/MSBank/Pages/Shared/AdminLTE/_Styles.cshtml
@@ -1,8 +1,7 @@
 ﻿
+<link href="~/css/site.css" asp-append-version="true" rel="stylesheet" type="text/css"/>
+
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 <link href="~/css/css/adminlte.css" rel="stylesheet" />
-<link href="~/css/site.css" rel="stylesheet" />
-<link href="~/plugins/fontawesome-free/css/all.min.css" rel="stylesheet" />
 
-@*chart js*@
-<link href="~/plugins/chart.js~/plugins/chart.js/Chart.min.css" rel="stylesheet" />
+<link href="~/plugins/fontawesome-free/css/all.min.css" rel="stylesheet" />
