--- a/MSBank/Pages/Shared/AdminLTE/_MainNavigation.cshtml
+++ b/MSBank/Pages/Shared/AdminLTE/_MainNavigation.cshtml
@@ -1,4 +1,7 @@
 ﻿
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+
 
 <aside class="main-sidebar sidebar-light-warning elevation-4">
     <!-- Brand Logo -->
@@ -15,22 +18,21 @@
             <div class="image">
                 <img src="~/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
             </div>
-            <div class="info">
-                <a href="#" class="d-block">User Name here</a>
-            </div>
+
+                @if (SignInManager.IsSignedIn(User))
+            {
+                <div class="info">
+                <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Welcome back!</a>
+                </div>
+            }
+            else
+            {
+                <div class="info">    
+                <a href="#" class="d-block">Hello Stranger</a>
+                </div>
+            }
         </div>
 
-        <!-- SidebarSearch Form -->
-        @*<div class="form-inline">
-            <div class="input-group" data-widget="sidebar-search">
-                <input class="form-control form-control-sidebar" type="search" placeholder="Search" aria-label="Search">
-                <div class="input-group-append">
-                    <button class="btn btn-sidebar">
-                        <i class="fas fa-search fa-fw"></i>
-                    </button>
-                </div>
-            </div>
-        </div>*@
 
         <!-- Sidebar Menu -->
         <nav class="mt-2">
